tests/spectest/struct.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\c7\80\80\80\00\08\5f"
  "\00\5f\00\5f\01\78\00\5f\04\78\00\78\00\78\00\78"
  "\00\5f\02\7f\00\7f\00\5f\0a\78\00\77\00\7f\00\7e"
  "\00\7d\00\7c\00\6e\00\70\00\64\00\00\63\01\00\5f"
  "\05\7f\00\7e\00\78\00\6c\00\6e\00\5f\04\7f\00\7d"
  "\00\7c\00\7f\00"
)
(module instance)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\a6\80\80\80\00\03\4e"
  "\02\5f\04\64\00\00\64\01\00\64\00\00\64\01\00\5f"
  "\04\64\00\00\64\01\00\64\00\00\64\01\00\5f\00\60"
  "\01\64\02\00\03\82\80\80\80\00\01\03\0a\88\80\80"
  "\80\00\01\82\80\80\80\00\00\0b"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\5f"
    "\01\64\01\00"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\5f"
    "\01\64\01\01"
  )
  "unknown type"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\a5\80\80\80\00\06\5f"
  "\01\7f\00\5f\02\7f\00\7d\00\5f\03\7f\00\7f\00\7e"
  "\00\60\01\64\00\01\7f\60\01\64\01\01\7d\60\01\64"
  "\02\01\7e\03\84\80\80\80\00\03\03\04\05\0a\a8\80"
  "\80\80\00\03\88\80\80\80\00\00\20\00\fb\02\00\00"
  "\0b\88\80\80\80\00\00\20\00\fb\02\01\01\0b\88\80"
  "\80\80\00\00\20\00\fb\02\02\02\0b"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8f\80\80\80\00\03\5f"
    "\01\7e\00\5f\01\7f\00\60\01\64\00\01\7f\03\82\80"
    "\80\80\00\01\02\0a\8e\80\80\80\00\01\88\80\80\80"
    "\00\00\20\00\fb\02\00\00\0b"
  )
  "type mismatch"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\a3\80\80\80\00\06\5f"
  "\03\7d\00\7d\01\7d\00\60\00\01\6e\60\01\64\00\01"
  "\7d\60\00\01\7d\60\02\64\00\7d\01\7d\60\01\7d\01"
  "\7d\03\8e\80\80\80\00\0d\01\02\03\02\03\02\03\02"
  "\03\04\05\04\05\06\9e\80\80\80\00\02\64\00\00\43"
  "\00\00\80\3f\43\00\00\00\40\43\00\00\40\40\fb\00"
  "\00\0b\64\00\00\fb\01\00\0b\07\cb\80\80\80\00\07"
  "\03\6e\65\77\00\00\07\67\65\74\5f\30\5f\30\00\02"
  "\09\67\65\74\5f\76\65\63\5f\30\00\04\07\67\65\74"
  "\5f\30\5f\79\00\06\09\67\65\74\5f\76\65\63\5f\79"
  "\00\08\09\73\65\74\5f\67\65\74\5f\79\00\0a\09\73"
  "\65\74\5f\67\65\74\5f\31\00\0c\0a\b5\81\80\80\00"
  "\0d\85\80\80\80\00\00\fb\01\00\0b\88\80\80\80\00"
  "\00\20\00\fb\02\00\00\0b\87\80\80\80\00\00\fb\01"
  "\00\10\01\0b\88\80\80\80\00\00\20\00\fb\02\00\00"
  "\0b\87\80\80\80\00\00\fb\01\00\10\03\0b\88\80\80"
  "\80\00\00\20\00\fb\02\00\01\0b\87\80\80\80\00\00"
  "\fb\01\00\10\05\0b\88\80\80\80\00\00\20\00\fb\02"
  "\00\01\0b\87\80\80\80\00\00\fb\01\00\10\07\0b\90"
  "\80\80\80\00\00\20\00\20\01\fb\05\00\01\20\00\fb"
  "\02\00\01\0b\89\80\80\80\00\00\fb\01\00\20\00\10"
  "\09\0b\90\80\80\80\00\00\20\00\20\01\fb\05\00\01"
  "\20\00\fb\02\00\01\0b\89\80\80\80\00\00\fb\01\00"
  "\20\00\10\0b\0b"
)
(module instance)
(assert_return (invoke "new") (ref.struct))
(assert_return (invoke "get_0_0") (f32.const 0x0p+0))
(assert_return (invoke "get_vec_0") (f32.const 0x0p+0))
(assert_return (invoke "get_0_y") (f32.const 0x0p+0))
(assert_return (invoke "get_vec_y") (f32.const 0x0p+0))
(assert_return (invoke "set_get_y" (f32.const 0x1.cp+2)) (f32.const 0x1.cp+2))
(assert_return (invoke "set_get_1" (f32.const 0x1.cp+2)) (f32.const 0x1.cp+2))
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\5f"
    "\01\7e\00\60\01\64\00\00\03\82\80\80\80\00\01\01"
    "\07\98\80\80\80\00\01\14\73\74\72\75\63\74\2e\73"
    "\65\74\2d\69\6d\6d\75\74\61\62\6c\65\00\00\0a\90"
    "\80\80\80\00\01\8a\80\80\80\00\00\20\00\42\01\fb"
    "\05\00\00\0b"
  )
  "field is immutable"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\5f"
  "\02\7f\00\7f\01\60\00\00\03\83\80\80\80\00\02\01"
  "\01\07\a5\80\80\80\00\02\0f\73\74\72\75\63\74\2e"
  "\67\65\74\2d\6e\75\6c\6c\00\00\0f\73\74\72\75\63"
  "\74\2e\73\65\74\2d\6e\75\6c\6c\00\01\0a\a4\80\80"
  "\80\00\02\8c\80\80\80\00\01\01\63\00\20\00\fb\02"
  "\00\01\1a\0b\8d\80\80\80\00\01\01\63\00\20\00\41"
  "\00\fb\05\00\01\0b"
)
(module instance)
(assert_trap (invoke "struct.get-null") "null structure reference")
(assert_trap (invoke "struct.set-null") "null structure reference")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\96\80\80\80\00\03\5f"
  "\04\78\00\78\01\77\00\77\01\60\00\02\7f\7f\60\01"
  "\7f\02\7f\7f\03\8b\80\80\80\00\0a\01\01\01\01\01"
  "\01\01\01\02\02\06\a5\80\80\80\00\02\64\00\00\41"
  "\00\41\01\41\02\41\03\fb\00\00\0b\64\00\00\41\fe"
  "\01\41\ff\01\41\fe\ff\03\41\ff\ff\03\fb\00\00\0b"
  "\07\c7\81\80\80\00\0c\02\67\30\03\00\02\67\31\03"
  "\01\0f\67\65\74\5f\70\61\63\6b\65\64\5f\67\30\5f"
  "\30\00\00\0f\67\65\74\5f\70\61\63\6b\65\64\5f\67"
  "\31\5f\30\00\01\0f\67\65\74\5f\70\61\63\6b\65\64"
  "\5f\67\30\5f\31\00\02\0f\67\65\74\5f\70\61\63\6b"
  "\65\64\5f\67\31\5f\31\00\03\0f\67\65\74\5f\70\61"
  "\63\6b\65\64\5f\67\30\5f\32\00\04\0f\67\65\74\5f"
  "\70\61\63\6b\65\64\5f\67\31\5f\32\00\05\0f\67\65"
  "\74\5f\70\61\63\6b\65\64\5f\67\30\5f\33\00\06\0f"
  "\67\65\74\5f\70\61\63\6b\65\64\5f\67\31\5f\33\00"
  "\07\13\73\65\74\5f\67\65\74\5f\70\61\63\6b\65\64"
  "\5f\67\30\5f\31\00\08\13\73\65\74\5f\67\65\74\5f"
  "\70\61\63\6b\65\64\5f\67\30\5f\33\00\09\0a\cf\81"
  "\80\80\00\0a\8e\80\80\80\00\00\23\00\fb\03\00\00"
  "\23\00\fb\04\00\00\0b\8e\80\80\80\00\00\23\01\fb"
  "\03\00\00\23\01\fb\04\00\00\0b\8e\80\80\80\00\00"
  "\23\00\fb\03\00\01\23\00\fb\04\00\01\0b\8e\80\80"
  "\80\00\00\23\01\fb\03\00\01\23\01\fb\04\00\01\0b"
  "\8e\80\80\80\00\00\23\00\fb\03\00\02\23\00\fb\04"
  "\00\02\0b\8e\80\80\80\00\00\23\01\fb\03\00\02\23"
  "\01\fb\04\00\02\0b\8e\80\80\80\00\00\23\00\fb\03"
  "\00\03\23\00\fb\04\00\03\0b\8e\80\80\80\00\00\23"
  "\01\fb\03\00\03\23\01\fb\04\00\03\0b\96\80\80\80"
  "\00\00\23\00\20\00\fb\05\00\01\23\00\fb\03\00\01"
  "\23\00\fb\04\00\01\0b\96\80\80\80\00\00\23\00\20"
  "\00\fb\05\00\03\23\00\fb\03\00\03\23\00\fb\04\00"
  "\03\0b"
)
(module instance)
(assert_return (invoke "get_packed_g0_0") (i32.const 0x0) (i32.const 0x0))
(assert_return
  (invoke "get_packed_g1_0")
  (i32.const 0xffff_fffe)
  (i32.const 0xfe)
)
(assert_return (invoke "get_packed_g0_1") (i32.const 0x1) (i32.const 0x1))
(assert_return
  (invoke "get_packed_g1_1")
  (i32.const 0xffff_ffff)
  (i32.const 0xff)
)
(assert_return (invoke "get_packed_g0_2") (i32.const 0x2) (i32.const 0x2))
(assert_return
  (invoke "get_packed_g1_2")
  (i32.const 0xffff_fffe)
  (i32.const 0xfffe)
)
(assert_return (invoke "get_packed_g0_3") (i32.const 0x3) (i32.const 0x3))
(assert_return
  (invoke "get_packed_g1_3")
  (i32.const 0xffff_ffff)
  (i32.const 0xffff)
)
(assert_return
  (invoke "set_get_packed_g0_1" (i32.const 0x101))
  (i32.const 0x1)
  (i32.const 0x1)
)
(assert_return
  (invoke "set_get_packed_g0_3" (i32.const 0x101))
  (i32.const 0x101)
  (i32.const 0x101)
)
